# zephyr-f411re-irq

./: .clang-format  .cspell.json  .gitignore  README.md  config.json
.github/workflows/: megalinter.yml  zephyr.yml
app/: CMakeLists.txt
app/boards/: nucleo_f411re.overlay
app/src/: main.c
